--- a/lireddit-server/package.json
+++ b/lireddit-server/package.json
@@ -18,5 +18,12 @@
     "nodemon": "^2.0.9",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "@mikro-orm/cli": "^4.5.7",
+    "@mikro-orm/core": "^4.5.7",
+    "@mikro-orm/migrations": "^4.5.7",
+    "@mikro-orm/postgresql": "^4.5.7",
+    "pg": "^8.6.0"
   }
 }
